--- a/DLTE-Spring/Task/1098-SpringBootJDBC/src/main/resources/templates/newTransaction.html
+++ b/DLTE-Spring/Task/1098-SpringBootJDBC/src/main/resources/templates/newTransaction.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
 </head>
 <body>
-</body><div class="container">
+<div class="container">
     <h2 class="mt-5">New Transaction</h2>
     <div th:if="${error}" class="alert alert-danger" role="alert">
         <strong>error:</strong> <span th:text="${error}"></span>
@@ -47,4 +47,5 @@
         </div>
     </form>
 </div>
+</body>
 </html>
