--- a/DLTE-FinalProject/mybank-debitcard-web/src/main/resources/static/styles/style.css
+++ b/DLTE-FinalProject/mybank-debitcard-web/src/main/resources/static/styles/style.css
@@ -1,3 +1,5 @@
+
+ /*index.html */
 body.loginpage {
     background-image:url("../images/background.jpg");
     background-size: cover;
@@ -17,3 +19,78 @@ body.loginpage {
     width: 100%;
     margin-left: 60px;
 }
+
+
+/*dashboard.html*/
+ body {
+     color: #182052;
+     font-family: "Poppins";
+ }
+
+ #myBank {
+     color: #182052;
+     font-family: "Poppin";
+ }
+
+ .logo {
+     height: 7vh;
+
+ }
+
+ button {
+     background-color: #182052;
+     margin-top: 2vh;
+     margin-right: 35px;
+     height: 7vh;
+     border-radius: 5rem;
+ }
+
+ .loginButton {
+     font-family: "Montserrat";
+     display: flex;
+     justify-content: center;
+     color: #182052;
+ }
+
+
+ .navbar-custom {
+     background-color: #182052;
+ }
+
+ .navbar-custom .navbar-brand,
+ .navbar-custom .navbar-nav .nav-link {
+     color: white;
+ }
+
+ .navbar-custom .nav-item.active .nav-link {
+     color: #f8f9fa !important;
+ }
+
+ .dropdown-toggle::after {
+     display: none;
+ }
+
+ .dropdown-menu {
+     background-color: #24307F;
+ }
+
+ .dropdown-item {
+     color: white;
+ }
+
+ .navbar-brand {
+     font-size: 46px;
+     font-weight: 800;
+ }
+
+ .navbar {
+     padding-top: 0;
+     padding-bottom: 0;
+ }
+
+ .navbar-text {
+     margin-right: 0;
+ }
+ footer{
+     background-color:#182052;
+ }
