--- a/DLTE-FinalProject/mybank-debitcard-web/src/main/resources/templates/dashboard.html
+++ b/DLTE-FinalProject/mybank-debitcard-web/src/main/resources/templates/dashboard.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 
 <head>
     <meta charset="UTF-8">
@@ -11,81 +11,8 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
+    <link th:href="@{'/styles/style.css'}" type="text/css" th:rel="stylesheet"/>
 
-    <style>
-        body {
-            color: #182052;
-            font-family: "Poppins";
-        }
-
-        #myBank {
-            color: #182052;
-            font-family: "Poppin";
-        }
-
-        .logo {
-            height: 7vh;
-
-        }
-
-        button {
-            background-color: #182052;
-            margin-top: 2vh;
-            margin-right: 35px;
-            height: 7vh;
-            border-radius: 5rem;
-        }
-
-        .loginButton {
-            font-family: "Montserrat";
-            display: flex;
-            justify-content: center;
-            color: #182052;
-        }
-
-
-        .navbar-custom {
-            background-color: #182052;
-        }
-
-        .navbar-custom .navbar-brand,
-        .navbar-custom .navbar-nav .nav-link {
-            color: white;
-        }
-
-        .navbar-custom .nav-item.active .nav-link {
-            color: #f8f9fa !important;
-        }
-
-        .dropdown-toggle::after {
-            display: none;
-        }
-
-        .dropdown-menu {
-            background-color: #24307F;
-        }
-
-        .dropdown-item {
-            color: white;
-        }
-
-        .navbar-brand {
-            font-size: 46px;
-            font-weight: 800;
-        }
-
-        .navbar {
-            padding-top: 0;
-            padding-bottom: 0;
-        }
-
-        .navbar-text {
-            margin-right: 0;
-        }
-        footer{
-            background-color:#182052;
-        }
-    </style>
 </head>
 
 <body>
@@ -96,7 +23,7 @@
 <nav>
     <ul class="nav">
         <li class="nav-item d-flex ml-3 mt-3">
-            <img class="logo" src="logo.png" />
+            <img class="logo" src="/images/logo.png" />
             <h2 id="myBank" class="justify-content-start "> MyBank</h2>
         </li>
         <li class="nav-item  ml-auto mt-3">
@@ -175,45 +102,47 @@
 </nav>
 
 
-<!--Caurosel-->
+<div class="container">
+    <div class="row justify-content-center">
+        <div class="col-md-8">
+            <div id="carouselSlide" class="carousel slide" data-ride="carousel">
+                <!-- Indicators -->
+                <ul class="carousel-indicators">
+                    <li data-target="#carouselSlide" data-slide-to="0" class="active"></li>
+                    <li data-target="#carouselSlide" data-slide-to="1"></li>
+                    <li data-target="#carouselSlide" data-slide-to="2"></li>
+                </ul>
 
-<div id="depositesSlide" class="carousel slide" data-ride="carousel">
-    <!-- Indicators -->
-    <ul class="carousel-indicators">
-        <li data-target="#depositesSlide" data-slide-to="0" class="active"></li>
-        <li data-target="#depositesSlide" data-slide-to="1"></li>
-        <li data-target="#depositesSlide" data-slide-to="2"></li>
-    </ul>
+                <!-- The slideshow -->
+                <div class="carousel-inner">
+                    <div class="carousel-item active">
+                        <img src="/images/slide1.jpg" alt="Slide 1" class="d-block w-100" style="height: 400px;">
+                    </div>
+                    <div class="carousel-item">
+                        <img src="/images/slide2.jpg" alt="Slide 2" style="height: 400px; width: 100%;">
+                    </div>
+                    <div class="carousel-item">
+                        <img src="/images/slide3.jpg" alt="Slide 3" style="height: 400px; width: 100%;">
+                    </div>
+                </div>
 
-    <!-- The slideshow -->
-    <div class="carousel-inner">
-        <div class="carousel-item active">
-            <img src="slide1.jpg" alt="Slide 1" style="height: 400px; width:100%">
-        </div>
-        <div class="carousel-item">
-            <img src="/images/newLogo.png" alt="Slide 2" style="height: 400px; width: 100%;">
-        </div>
-        <div class="carousel-item">
-            <img src="/images/background.png" alt="Slide 3" style="height: 400px; width: 100%;">
+                <!-- Left and right controls -->
+                <a class="carousel-control-prev" href="#carouselSlide" data-slide="prev">
+                    <span class="carousel-control-prev-icon"></span>
+                </a>
+                <a class="carousel-control-next" href="#carouselSlide" data-slide="next">
+                    <span class="carousel-control-next-icon"></span>
+                </a>
+            </div>
         </div>
     </div>
-
-    <!-- Left and right controls -->
-    <a class="carousel-control-prev" href="#depositesSlide" data-slide="prev">
-        <span class="carousel-control-prev-icon"></span>
-    </a>
-    <a class="carousel-control-next" href="#depositesSlide" data-slide="next">
-        <span class="carousel-control-next-icon"></span>
-    </a>
 </div>
-
 
 <!--footer section-->
 
-
-<footer class="footer text-white text-center py-3 mt-4"  style="border-radius: 35px 35px 0 0;">
+<footer class="footer text-white text-center py-3 mt-4"  style="border-radius: 20px 20px 20px 20px;">
     <li class="nav-item d-flex ml-3 mt-3">
-        <img class="logo" src="logo.png" />
+        <img class="logo" src="/images/logo.png" />
         <h2 id="myBankFooter" class="justify-content-start " style="color: #f8f9fa;"> MyBank</h2>
     </li>
     <div class="row justify-content-end mr-5">
@@ -243,14 +172,10 @@
         </ul>
     </div>
     <hr class="bg-white mt-0" />
-
     <div class="col-12 d-flex justify-content-between">
         <span>© 2024 MyBank. All rights reserved.</span>
         <span>Terms & Conditions</span>
     </div>
-
 </footer>
-
 </body>
-
 </html>
