--- a/DLTE-FinalProject/mybank-debitcard-web/src/main/resources/templates/index.html
+++ b/DLTE-FinalProject/mybank-debitcard-web/src/main/resources/templates/index.html
@@ -1,50 +1,55 @@
-
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<html xmlns:th="http://www.thymeleaf.org" lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Login</title>
-
-    <!-- Bootstrap Icons CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
-    <!-- Bootstrap JS Bundle (popper.js included) -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js" integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy" crossorigin="anonymous"></script>
-    <link th:href="@{'/styles/style.css'}" type="text/css" th:rel="stylesheet"/>
+    <title>Login - My Bank</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+    <link rel="stylesheet" type="text/css" th:href="@{'/css/index.css'}">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@800&family=Poppins:wght@400;700&display=swap" rel="stylesheet">
 
 </head>
-<body class="loginpage">
+<body class="bg-dark text-white">
 
-<div class="container">
+<div id="title-logo">
+    <img src="/images/logo.png" alt="Logo" th:height="50px" th:width="50px">
+    <h3 class="title-text">
+        <i class="fa fa-globe"></i>&nbsp My Bank
+    </h3>
+</div>
 
-    <div style="display: flex; justify-content: flex-end; align-items: center; height: 100vh;">
+<div class="container mt3-l px-4">
+    <div class="row justify-content-center align-items-center vh-100">
+        <div class="col-md-6 pr-md-4">
+            <h1 class="login-text" style="font-size: 50px;">Login</h1>
+            <h3 style="font-size: 40px;">Sign in to continue</h3>
+        </div>
 
-        <div class="login-container col-lg-4 col-md-6 col-12 align-self-center p-5 rounded-5 ">
-            <h2 class="text-center mb-4">MyBank Login</h2>
-            <h5 th:if="${param.error}" style="text-align: center; margin-bottom: 20px;">
-                <span style="font-size: 20px; color: Red;" th:text="${session?.SPRING_SECURITY_LAST_EXCEPTION?.message}"></span>
-            </h5>
-            <h5 th:if="${param.errors}" style="text-align: center; margin-bottom: 20px;">
-                <span style="font-size: 20px; color: Red;" th:text="${param.errors}"></span>
-            </h5>
-
-            <form action="#" th:action="@{'/web/'}" method="post" >
-                <div class="form-group">
-                    <label for="username">Username</label>
-                    <input type="text" id="username" name="username" class="form-control" placeholder="Username" required>
-                </div>
-                <div class="form-group">
-                    <label for="password">Password</label>
-                    <input type="password" id="password" name="password" class="form-control" placeholder="Password" required>
-                </div>
-                <div class="row justify-content-around mt-4">
-                    <input type="submit" id="login" class="col-5 btn btn-primary"/>
-                    <input type="reset" id="cancel" class="col-5 btn btn-secondary"/>
-                </div>
-            </form>
+        <div class="col-md-6 ml-auto d-flex align-items-center justify-content-center">
+            <div class="card text-white mb-3 p-3 shadow-lg">
+                <h2 class="mb-4">Sign in</h2>
+                <h1 th:if="${param.error}" style="font-family: 'Poppins', sans-serif;text-align: center;font-size: 5px;">
+                    <span style="font-size:15px;color:red;" th:text="${session?.SPRING_SECURITY_LAST_EXCEPTION?.message}"></span>
+                </h1>
+                <h5 th:if="${param.errors}" style="text-align: center; margin-bottom: 20px;">
+                    <span style="font-size: 20px; color: Red;" th:text="${param.errors}"></span>
+                </h5>
+                <form  th:action="@{'/card/login'}" method="post" id="login-form">
+                    <!-- Username Input -->
+                    <div class="form-group">
+                        <label for="username">Username</label>
+                        <input type="text" class="form-control" id="username" name="username" placeholder="Enter your username" required>
+                    </div>
+                    <!-- Password Input -->
+                    <div class="form-group">
+                        <label for="password">Password</label>
+                        <input type="password" class="form-control" id="password" name="password" placeholder="Enter your password" required>
+                    </div>
+                    <button type="submit" id="login" class="btn btn-orange mb-3">Login</button>
+                </form>
+            </div>
         </div>
     </div>
 </div>
