--- a/DLTE-FinalProject/mybank-debitcard-web/src/main/resources/templates/view.html
+++ b/DLTE-FinalProject/mybank-debitcard-web/src/main/resources/templates/view.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <link rel="stylesheet" type="text/css" th:href="@{'/css/dashboard.css'}">
-    <script th:src="@{'/js/dashboard.js'}"></script>
+    <script th:src="@{'/js/view.js'}"></script>
     <style>
         .btn{
             background-color: #f7f7f7;
