--- a/DLTE-FinalProject/mybank-debitcard-web/src/main/resources/templates/dashboard.html
+++ b/DLTE-FinalProject/mybank-debitcard-web/src/main/resources/templates/dashboard.html
@@ -110,7 +110,7 @@
     <!-- The slideshow -->
     <div class="carousel-inner">
         <div class="carousel-item active">
-            <img src="/images/slide1.jpg" alt="Slide 1" style="height: 400px; width:100%">
+            <img src="/images/slide1.png" alt="Slide 1" style="height: 400px; width:100%">
         </div>
         <div class="carousel-item">
             <img src="/images/slide2.jpg" alt="Slide 2" style="height: 400px; width: 100%;">
