--- a/DLTE-Spring/Task/1098-SpringBootJDBC/src/main/resources/templates/newTransaction.html
+++ b/DLTE-Spring/Task/1098-SpringBootJDBC/src/main/resources/templates/newTransaction.html
@@ -9,6 +9,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js" integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy" crossorigin="anonymous"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+    <link rel="stylesheet" th:href="@{'/transaction.css'}">
 </head>
 <body>
 <div class="container">
